noinst_LTLIBRARIES = liblivecast-admin-gui.la

liblivecast_admin_gui_la_CXXFLAGS = \
	-I$(top_builddir)/src \
	-I$(top_builddir)/3rdparty/treelistctrl \
	$(CXXFLAGS)

liblivecast_admin_gui_la_SOURCES = \
	GuiConfiguration.cc \
	LivecastControl.cc \
	LivecastEditPipeline.cc \
	LivecastGui.cc \
	LivecastInfos.cc \
	LivecastListCtrl.cc \
	LivecastPreferences.cc \
	LivecastResult.cc \
	LivecastServers.cc \
	LivecastStatus.cc \
	LivecastTaskBarIcon.cc \
	ResultCallback.cc \
	StatusSchema.cc \
	Util.cc \
	$(top_builddir)/3rdparty/treelistctrl/wx/treelistctrl.cc
